package com.example.sunxiaodong.library.base.formatter;

import com.example.sunxiaodong.library.base.model.AxisLabel;

/**
 * Created by sunxiaodong on 16/6/25.
 */
public interface AxisValueFormatter {

    int formatValueForManualAxis(char[] formattedValue, AxisLabel axisValue);

    int formatValueForAutoGeneratedAxis(char[] formattedValue, float value, int autoDecimalDigits);

}
