package com.example.sunxiaodong.library.base.model;

/**
 * 图表缩放生成时，坐标轴上自动生成的轴标签数据存储单元
 * Created by sunxiaodong on 16/6/25.
 */
public class AxisAutoValues {

    public float[] values = new float[]{};//单个轴上的标签位置数组
    public int valuesNumber;//可显示的标签位置数量
    public int decimals;//是否是小数

}
