@startuml

class LineChartView

class AbstractChartView

abstract AbstractChartView <|-- LineChartView

class View

View <|-- AbstractChartView

interface Chart

Chart <|.. AbstractChartView

class LineChartData

LineChartData --o LineChartView

abstract class AbstractChartData

AbstractChartData <|-- LineChartData

interface ChartData

ChartData <|.. AbstractChartData

class Axis

Axis --o AbstractChartData

class SimpleAxisValueFormatter

SimpleAxisValueFormatter --o Axis

interface AxisValueFormatter

AxisValueFormatter <|.. SimpleAxisValueFormatter

class ValueFormatterHelper

ValueFormatterHelper --o SimpleAxisValueFormatter

class ChartComputer

ChartComputer --o AbstractChartView

class Viewport

Viewport --o ChartComputer

class Rect

Rect --o ChartComputer

class AxesRenderer

AxesRenderer --o AbstractChartView

class AxisAutoValues

AxisAutoValues --o AxesRenderer

interface LineChartDataProvider

LineChartDataProvider <|.. LineChartView

class LineChartRenderer

LineChartRenderer --o LineChartView

abstract class AbstractChartRenderer

AbstractChartRenderer <|-- LineChartRenderer

interface ChartRenderer

ChartRenderer <|.. AbstractChartRenderer

LineChartDataProvider --o LineChartRenderer

class Line

Line --o LineChartData

class PointValue

PointValue --o Line

class SimpleLineChartValueFormatter

SimpleLineChartValueFormatter --o Line

interface LineChartValueFormatter

LineChartValueFormatter <|.. SimpleLineChartValueFormatter

ValueFormatterHelper --o SimpleLineChartValueFormatter

interface ChartDataAnimator

class SimpleChartDataAnimatorV8

ChartDataAnimator <|.. SimpleChartDataAnimatorV8

class SimpleChartDataAnimatorV14

ChartDataAnimator <|.. SimpleChartDataAnimatorV14

ChartDataAnimator --o AbstractChartView

@enduml